# Ecos-del-Crepusculo

./: .gitignore  CMakeLists.txt  PROYECTO_COMPLETADO.md  README.md  build.bat  clean.bat
.kiro/specs/debug-error-system/: design.md  requirements.md  tasks.md
docs/: DebugSystem_README.md  SISTEMA_COMPLETO_README.md  SISTEMA_EXCEPCIONES_README.md
include/: Button.h  CommandProcessor.h  DebugConfig.h  DebugConsole.h  DebugOptimizations.h  DebugSystem.h  Enemy.h  GameObject.h  IAttacker.h  Image.h  ImageView.h  Inventory.h  Item.h  LLNode.h  Label.h  Level.h  LinkedList.h  Logger.h  MyDLLWrapper.h  ObjectInspector.h  PerformanceMonitor.h  Player.h  Projectile.h  SaveManager.h  Singleton.h  UISystem.h  View.h  Weapon.h  sideKick.h
resources/: decoration.txt
src/: Button.cpp  CommandProcessor.cpp  DebugConfig.cpp  DebugConsole.cpp  DebugSystem.cpp  Enemy.cpp  GameObject.cpp  Image.cpp  ImageView.cpp  Inventory.cpp  Label.cpp  Level.cpp  Logger.cpp  MyDLLWrapper.cpp  ObjectInspector.cpp  PerformanceMonitor.cpp  Player.cpp  Projectile.cpp  SaveManager.cpp  UISystem.cpp  Weapon.cpp  main.cpp  sideKick.cpp
tests/: DebugSystemTests.cpp  SimpleMakefile  SimpleTests.cpp
